extensions/camunda/base/ingress-operator.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-operator
  namespace: camunda
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`camunda-operator.k3s-cluster.io`)
      kind: Rule
      services:
        - name: camunda-operate
          kind: Service
          namespace: camunda
          port: 80
  tls:
    secretName: k3s-cluster-tls
