extensions/camunda/base/ingress-tasklist.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-tasklist
  namespace: camunda
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`camunda-tasklist.k3s-cluster.io`)
      kind: Rule
      services:
        - name: camunda-tasklist
          kind: Service
          namespace: camunda
          port: 80
  tls:
    secretName: k3s-cluster-tls
