extensions/camunda/base/ingress-zeebe-gateway.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-zeebe-gateway
  namespace: camunda
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`camunda-zeebe-gateway.k3s-cluster.io`)
      kind: Rule
      services:
        - name: camunda-zeebe-gateway
          kind: Service
          namespace: camunda
          port: 26500
          scheme: h2c
  tls:
    secretName: k3s-cluster-tls
